--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     </section>
     <footer>
-        <p>Desenvolvido pelos Alunos: Wagner Junior Cabral Gama e Luiz Gustavo</p>
+        <p>Desenvolvido pelos Alunos: Samuel e Jorge</p>
     </footer>
     <script src="main.js"></script>
     <script src="perguntas.js"></script>
