--- a/projeto2.html
+++ b/projeto2.html
@@ -11,7 +11,7 @@
 
     </section>
     <footer>
-        <p>Desenvolvido pelo Aluno: Wagner Junior Cabral Gama</p>
+        <p>Desenvolvido pelos alunos: Samuel e Jorge</p>
     </footer>
     <script src="projeto2.js"></script>
     <script src="perguntas.js"></script>
