--- a/projeto2.html
+++ b/projeto2.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="projeto2.css">
 </head>
 <body>
+    <header>
+        <a href="pagina1.html">Página 1</a>
+        <a href="pagina2.html">Página 2</a>
+    </header>
     <section id="container">
 
     </section>
