--- a/projeto2.html
+++ b/projeto2.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <header>
-        <a href="pagina1.html">Página 1</a>
-        <a href="pagina2.html">Página 2</a>
+        <a href="perguntas.html">Página 1</a>
+        <a href="projeto2.html">Página 2</a>
     </header>
     <section id="container">
 
