--- a/projeto2.html
+++ b/projeto2.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <a href="perguntas.html">Página 1</a>
+        <a href="index.html">Página 1</a>
         <a href="projeto2.html">Página 2</a>
     </header>
     <section id="container">
