--- a/projeto2.html
+++ b/projeto2.html
@@ -17,7 +17,7 @@
     <footer>
         <p>Desenvolvido pelos alunos: Samuel e Jorge</p>
     </footer>
-    <script src="projeto2.css"></script>
+    <script src="projeto2.js"></script>
     <script src="perguntas.js"></script>
 </body>
 </html>
